Minor fixes on mobile section

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 	--mild-gry: #48566b;
 	--mdl-hdr: #4b566b;
 	--mdl-lbl: #373f50;
+	--footer-bg: #343a40;
 	--section-bg: rgba(112, 120, 138, 0.123) 0;
 	--sht-trans: all 0.2s ease-in-out;
 	--card-border: 1px solid rgba(0, 0, 0, 0.125);
